First commited as before_47024_rev1