@@ -161,7 +161,7 @@ public class MasterDetailScenarios extends ScenariosTestCase {
 				boolean.class) {
 			@Override
 			protected Object calculate() {
-				return Boolean.valueOf(selectedLodgingObservable.getValue() != null);
+				return new Boolean(selectedLodgingObservable.getValue() != null);
 			}
 		};
 
@@ -293,7 +293,7 @@ public class MasterDetailScenarios extends ScenariosTestCase {
 		ComputedValue categorySelectionExistsObservable = new ComputedValue() {
 			@Override
 			protected Object calculate() {
-				return Boolean.valueOf(
+				return new Boolean(
 						selectedCategoryObservable.getValue() != null);
 			}
 		};
@@ -308,7 +308,7 @@ public class MasterDetailScenarios extends ScenariosTestCase {
 		ComputedValue adventureSelectionExistsObservable = new ComputedValue() {
 			@Override
 			protected Object calculate() {
-				return Boolean.valueOf(
+				return new Boolean(
 						selectedAdventureObservable.getValue() != null);
 			}
 		};
